--- a/styles/products.css
+++ b/styles/products.css
@@ -1,1 +1,23 @@
 /* add home page styles here */
+.list-item {
+    height: 600px;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+li p {
+    text-align: center;
+    margin: 0px;
+}
+
+li>img {
+    height: 300px;
+}
+
+.product-price {
+    width: 150px;
+    padding: 10px;
+}
