--- a/styles/items.css
+++ b/styles/items.css
@@ -1,20 +1,31 @@
 /* add home page styles here */
+.item-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: top;
+}
+
 .list-item {
     height: 600px;
-    width: 200px;
+    width: 225px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: top;
+    text-align: center;
+    margin: 20px;
 }
 
 li p {
     text-align: center;
     margin: 0px;
+    margin: 5px;
 }
 
 li>img {
     height: 300px;
+
 }
 
 .item-price {
