--- a/common/main.css
+++ b/common/main.css
@@ -19,13 +19,13 @@ body {
     --footer-height: 25px;
     
     font-family: 'Titillium Web', sans-serif;
-    background-color:#eeeeee;
+    background-color:#f5f5f5;
     background-image:
-    radial-gradient(circle at 100% 150%, #eeeeee 24%, white 24%, white 28%, #eeeeee 28%, #eeeeee 36%, white 36%, white 40%, transparent 40%, transparent),
-    radial-gradient(circle at 0    150%, #eeeeee 24%, white 24%, white 28%, #eeeeee 28%, #eeeeee 36%, white 36%, white 40%, transparent 40%, transparent),
-    radial-gradient(circle at 50%  100%, white 10%, #eeeeee 10%, #eeeeee 23%, white 23%, white 30%, #eeeeee 30%, #eeeeee 43%, white 43%, white 50%, #eeeeee 50%, #eeeeee 63%, white 63%, white 71%, transparent 71%, transparent),
-    radial-gradient(circle at 100% 50%, white 5%, #eeeeee 5%, #eeeeee 15%, white 15%, white 20%, #eeeeee 20%, #eeeeee 29%, white 29%, white 34%, #eeeeee 34%, #eeeeee 44%, white 44%, white 49%, transparent 49%, transparent),
-    radial-gradient(circle at 0    50%, white 5%, #eeeeee 5%, #eeeeee 15%, white 15%, white 20%, #eeeeee 20%, #eeeeee 29%, white 29%, white 34%, #eeeeee 34%, #eeeeee 44%, white 44%, white 49%, transparent 49%, transparent);
+    radial-gradient(circle at 100% 150%, #f5f5f5 24%, white 24%, white 28%, #f5f5f5 28%, #f5f5f5 36%, white 36%, white 40%, transparent 40%, transparent),
+    radial-gradient(circle at 0    150%, #f5f5f5 24%, white 24%, white 28%, #f5f5f5 28%, #f5f5f5 36%, white 36%, white 40%, transparent 40%, transparent),
+    radial-gradient(circle at 50%  100%, white 10%, #f5f5f5 10%, #f5f5f5 23%, white 23%, white 30%, #f5f5f5 30%, #f5f5f5 43%, white 43%, white 50%, #f5f5f5 50%, #f5f5f5 63%, white 63%, white 71%, transparent 71%, transparent),
+    radial-gradient(circle at 100% 50%, white 5%, #f5f5f5 5%, #f5f5f5 15%, white 15%, white 20%, #f5f5f5 20%, #f5f5f5 29%, white 29%, white 34%, #f5f5f5 34%, #f5f5f5 44%, white 44%, white 49%, transparent 49%, transparent),
+    radial-gradient(circle at 0    50%, white 5%, #f5f5f5 5%, #f5f5f5 15%, white 15%, white 20%, #f5f5f5 20%, #f5f5f5 29%, white 29%, white 34%, #f5f5f5 34%, #f5f5f5 44%, white 44%, white 49%, transparent 49%, transparent);
     background-size: 100px 50px;
 }
 
@@ -112,6 +112,7 @@ footer {
     outline-offset: -10px;
     position: relative;
     z-index:-1;
+    margin-top: 50px;
 }
 
 .page-title {
@@ -129,6 +130,5 @@ a {
 }
 
 section {
-    margin: 0px;
     padding: 0px;
 }
