--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -35,13 +35,34 @@ td {
     margin: 0;
 }
 
-.total-row {
+#order-total {
     font-size: 1.5rem;
     font-weight: bolder;
+    text-align: right;
+    padding-right: 20px;
 }
 
 button {
-    width: 150px;
-    padding: 10px;
-    margin: 20px;
+    height: 50px;
+    padding: 10px 20px 10px 20px;
+    font-size: 1.25rem;
+    background-color: silver;
+    border-radius: 25px;
+    border-color: lightgray;
+    border-width: 2px;
+    color: white;
+}
+
+.cart-header-row {
+    font-size: 1.5rem;
+}
+
+table {
+    width: 75%;
+    font-size: 1.25rem;
+    margin-bottom: 20px;
+}
+
+.table-container {
+    padding-bottom: 50px;
 }
