--- a/styles/items.css
+++ b/styles/items.css
@@ -41,3 +41,13 @@ li>img {
     border-width: 2px;
     color: white;
 }
+
+.item-id {
+    display: none;
+}
+
+.item-name {
+    font-size: 1.5rem;
+    font-weight: bolder;
+    margin-bottom: 10px;
+}
